--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.4.0",
         "@tailwindcss/typography": "^0.5.0",
-        "cross-env": "^7.0",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.1.0",
         "axios": "^0.21",
+        "cross-env": "^7.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.2.1",
@@ -25,5 +25,8 @@
         "sass-loader": "^12.1.0",
         "tailwindcss": "^3.0.0",
         "vue-template-compiler": "^2.6.14"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.1.1"
     }
 }
