--- a/.env.example
+++ b/.env.example
@@ -45,3 +45,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FAKER_LOCALE=es_ES
+
+# MERCADOPAGO
+MP_PUBLIC_KEY=
+MP_ACCESS_TOKEN=
