--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/jetstream": "^2.6",
         "laravel/sanctum": "^2.15",
         "laravel/tinker": "^2.5",
-        "livewire/livewire": "^2.5"
+        "livewire/livewire": "^2.5",
+        "mercadopago/dx-php": "^2.5"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
