--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,9 @@
 {
     "/js/app.js": "/js/app.js",
+    "/js/admin/admin.js": "/js/admin/admin.js",
+    "/js/admin/products/productCreateAlpine.js": "/js/admin/products/productCreateAlpine.js",
     "/css/appSass.css": "/css/appSass.css",
-    "/css/app.css": "/css/app.css"
+    "/css/admin.css": "/css/admin.css",
+    "/css/app.css": "/css/app.css",
+    "/css/adminSass.css": "/css/adminSass.css"
 }
