admin edit product

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,6 +2,7 @@
     "/js/app.js": "/js/app.js",
     "/js/admin/admin.js": "/js/admin/admin.js",
     "/js/admin/products/productCreateAlpine.js": "/js/admin/products/productCreateAlpine.js",
+    "/js/admin/products/productEditAlpine.js": "/js/admin/products/productEditAlpine.js",
     "/css/appSass.css": "/css/appSass.css",
     "/css/admin.css": "/css/admin.css",
     "/css/app.css": "/css/app.css",
