--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.49.7",
         "sass-loader": "^12.1.0",
+        "sweetalert2": "^11.7.2",
         "tailwindcss": "^3.0.0",
         "vue-template-compiler": "^2.6.14"
     },
